<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Перепись Населения</string>
    <string name="map">Карта</string>
    <string name="info">Информация</string>
    <string name="statistics">Статистика</string>
    <string name="census_population">Перепись населения</string>
    <string name="login">Войти в панель переписчика</string>
    <string name="irs">Перейти в справочную систему</string>
    <string name="made_with_love">Made with ❤️</string>
    <string name="version">Версия: %s</string>
    <string name="choose_census">Выбрать перепись</string>
    <string name="close">Закрыть</string>
    <string name="region_city_info">Информация о регионе/городе</string>
    <string name="full_statistics">Общая статистика</string>
    <string name="error_loading_census_events">Ошибка загрузки списка переписей</string>
    <string name="error_loading_census_details">Ошибка загрузки деталей переписи</string>
    <string name="error_loading_region_statistics">Ошибка загрузки статистики региона</string>
    <string name="error_loading_city_statistics">Ошибка загрузки статистики города</string>
    <string name="region">Регион</string>
    <string name="choosing_census">Выбор переписи</string>
    <string name="city">Город</string>
    <string name="general_information">Общая информация</string>
    <string name="demographic_data">Демографические данные</string>
    <string name="education_and_languages">Образование и языки</string>
    <string name="gender_distribution">Распределение по полу</string>
    <string name="distribution_by_education">Распределение по образованию</string>
    <string name="languages_top">Топ языков</string>
    <string name="regions_distribution">Распределение по регионам</string>
    <string name="cities_distribution">Распределение по городам</string>
</resources>